update hashorn dependency imports